--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Old Man Yells at HEMA
-description: Things I think, Art, Why you are wrong.
+description: Things I think that are probably wrong, Art, and why you are also probably wrong.
 url: "" # e.g., https://oldmanyellsathema.github.io or https://proveitwithiron.com
 baseurl: "" # e.g., /old-man-yells-at-hema for project pages; leave blank for user/organization site
 theme: minima
