--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Old Man Yells at HEMA
 description: Things I think that are probably wrong, Art, and why you are also probably wrong.
-url: "" # e.g., https://oldmanyellsathema.github.io or https://proveitwithiron.com
-baseurl: "" # e.g., /old-man-yells-at-hema for project pages; leave blank for user/organization site
+url: "https://old-man-yells-at-hema.github.io" # e.g., https://oldmanyellsathema.github.io or https://proveitwithiron.com
+baseurl: "/YOUR-REPO-NAME" # e.g., /old-man-yells-at-hema for project pages; leave blank for user/organization site
 theme: minima
 minima:
   skin: dark
