--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ minima:
   skin: dark
 
 author:
-  name: Geoffrey Harrington
+  name: Me
 
 # Add top‑nav pages (files must exist in repo root)
 header_pages:
