--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Old Man Yells at HEMA
+---
+
 title: Old Man Yells at HEMA
 description: Things I think that are probably wrong, Art, and why you are also probably wrong.
 url: "https://oldmanyellsathema.github.io"   # no trailing slash
