--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,12 @@ collections:
   library:
     output: true
     permalink: /library/:title/
+  gallery:
+    output: true
+    permalink: /gallery/:title/
+  recipes:
+    output: true
+    permalink: /recipes/:title/
 
 defaults:
   - scope:
@@ -26,6 +32,17 @@ defaults:
       type: library
     values:
       layout: library_item
+  - scope:
+      path: ""
+      type: gallery
+    values:
+      layout: gallery_item
+  - scope:
+      path: ""
+      type: recipes
+    values:
+      layout: recipes_item
+
 
 # Markdown + permalinks
 markdown: kramdown
